[package]
name = "animal-farm"
version = "0.1.0"
license-file = "LICENSE.md"
readme = "README.md"
edition = "2021"
authors = ["Dmitry Khokhlov <daeh0f@protonmail.org>"]
repository = "https://github.com/daeh0f/aimal-farm/"
description = "Framework for fuzz testing automation and monitoring"
keywords = [ "fuzzing", "manager", "testing", "dashboard", "automation" ]
categories = [ "development-tools::testing" ]



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
